prevent wrapping of links

--- a/css/custom.css
+++ b/css/custom.css
@@ -38,6 +38,10 @@ figure.highlight pre {
   margin-bottom: 25px;
 }
 
+.fancylink {
+  white-space: nowrap;
+}
+
 .fancylink svg {
   width: 8px;
   height: 10px;
